--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "facebook/graph-sdk": "^5.1",
+        "php-http/curl-client": "^2.2",
+        "guzzlehttp/psr7": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
